--- a/package.json
+++ b/package.json
@@ -1,5 +1,26 @@
 {
+  "scripts": {
+    "start": "node server.js",
+    "dev": "concurrently \"npm run start\" \"cd hellomed && npm start\""
+  },
   "dependencies": {
-    "mongodb": "^5.5.0"
+    "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.2.3",
+    "config": "^3.3.9",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.0",
+    "mongodb": "^5.5.0",
+    "mongoose": "^7.2.1",
+    "react-bootstrap": "^2.7.4",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.11.2",
+    "react-use-navigate": "^0.1.1",
+    "redux": "^4.2.1"
+  },
+  "devDependencies": {
+    "concurrently": "^8.0.1"
   }
 }
