--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongodb": "^5.5.0",
     "mongoose": "^7.2.1",
     "react-bootstrap": "^2.7.4",
+    "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
     "react-use-navigate": "^0.1.1",
